// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mounts with custom props passes in custom flatlist props 1`] = `
<FlatList
  ListHeaderComponent={[Function]}
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with comments with next page renders correctly 1`] = `
<FlatList
  ListFooterComponent={
    <withI18nextTranslation(LoadMore)
      onPress={[Function]}
    />
  }
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  data={
    Array [
      Object {
        "content": "some comment",
      },
      Object {
        "content": "another comment",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with comments with next page renders item correctly 1`] = `
<Connect(CommentItem)
  item={
    Object {
      "content": "hello roge",
      "person": Object {
        "id": "1",
      },
    }
  }
  onLongPress={[Function]}
  organization={
    Object {
      "id": "24234234",
    }
  }
/>
`;

exports[`with comments without next page renders correctly 1`] = `
<FlatList
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  data={
    Array [
      Object {
        "content": "some comment",
      },
      Object {
        "content": "another comment",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with no comments renders correctly 1`] = `
<FlatList
  bounces={false}
  contentContainerStyle={
    Object {
      "paddingBottom": 15,
    }
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "flex": 1,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
